css/main.css
@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
body {
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  font-weight: 400;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-font-smoothing: subpixel-antialiased;
  -webkit-backface-visibility: hidden; 
  backface-visibility: hidden;
}
a {
  color: #2576E5;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
a:hover {
  color: #e76c3c;
}
.row {
  padding: 80px 0px;
}
.btn {
  border: none;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
  text-transform: uppercase;
  border-radius: 0;
}
.btn-common {
  background: #3d566e;
  color: #fff;
}
.btn-common:hover {
  background: #2576E5;
  color: #fff;
}

.title {
  text-align: center;
  font-size: 50px;
}
.subtitle {
  text-align: center;
  font-weight: 100;
  padding-bottom: 30px;
  position: relative;
  color: #bdc3c7;
}
.navbar {
  margin-bottom: 0;
}
.navbar li {
  color: #d1d1d1;
}
.navbar-default {
  border: none;
  border-radius: 0;
  background: rgba(0, 0, 0, 0.2);
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  background: none;
  color: #fff;
}
.navbar-default .navbar-nav li a,
.navbar-default .navbar-nav li a:hover {
  color: #fff;
}
.navbar-default .navbar-nav > .active,
.navbar-default .navbar-nav li:hover {
  background: #2576E5;
  padding-bottom: 5px;
  color: #fff;
}
.navbar-default .navbar-brand {
  font-size: 25px;
  color: #fff;
  font-weight: 100;
}
.navbar-default .navbar-brand:hover {
  color: #eee;
}
.navbar-default .navbar-toggle .icon-bar {
  background: #fff;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background: #333;
}
.affix.navbar-default {
  background: rgba(0, 0, 0, 0.8);
}
#hero-area {
  background: #013543;
  background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -moz-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -o-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -ms-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  color: #fff;
}
#hero-area .btn {
  margin-right: 20px;
}
#hero-area img {
  max-width: 100%;
}
#hero-area p {
  padding: 50px 0;
}
#services h3 {
  margin-top: 0;
  font-size: 28px;
  color: #2576E5;
}

#download, #help {
  background: #f1f1f1;
}
/*Portfolio*/
#portfolio {
  background: #f1f1f1;
}
/*Portfolio Overlay */
.portfolio-item {
  position: relative;
  margin-bottom: 15px;
}
.portfolio-item img {
  width: 100%;
}
.portfolio-item .overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
}
.portfolio-item:hover .overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(0, 0, 0, 0.8);
  display: block;
}
.portfolio-item .icons .preview {
  position: absolute;
  left: 40%;
  top: 40%;
  color: #fff;
  -webkit-animation-name: fadeInLeft;
  animation-name: fadeInLeft;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
.portfolio-item .icons .preview i {
  color: #2576E5;
}
#clients {
  background: #fff;
}
#about {
  background: #013543;
  background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -moz-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -o-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: -ms-radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  background-image: radial-gradient(50% 50%, ellipse cover, #02647e 0%, #000508 100%);
  color: #fff;
}

#contact {
  background: #f1f1f1;
}
#contact ::-webkit-input-placeholder {
  color: #ecf0f1;
}
#contact :-moz-placeholder {
  color: #ecf0f1;
}
#contact ::-moz-placeholder {
  color: #ecf0f1;
}
#contact :-ms-input-placeholder {
  color: #ecf0f1;
}
#contact .social i {
  color: #fff;
  padding: 10px;
  margin-right: 5px;
  width: 50px;
  height: 50px;
  vertical-align: middle;
  background: #34495e;
}
#contact .social .social-links a:hover {
  color: #fff;
}
#contact .social .fa-facebook:hover {
  background: #3b5998;
  color: #fff;
}
#contact .social .fa-twitter:hover {
  background: #00CAFB;
  color: #fff;
}
#contact .social .fa-google-plus:hover {
  background: #D23A1D;
  color: #fff;
}
#contact .social .fa-linkedin:hover {
  background: #007bb6;
  color: #fff;
}
#contact .social .fa-dribbble:hover {
  background: #ea4c89;
  color: #fff;
}
#contact .social .fa-github:hover {
  background: #171515;
  color: #fff;
}
#contact .contact-info {
  margin: 40px 0;
}
#contact .contact-info p {
  font-size: 20px;
}
#contact .contact-form .form-control {
  box-shadow: none;
  font-size: 17px;
  margin-bottom: 20px;
  border-radius: 0;
  border: none;
}

/*Scroll Top*/
.to-top i {
  padding: 10px 15px;
  margin: 10px;
  background: transparent;
  color: #34495e;
  border: 2px solid #34495e;
}
.to-top i:hover {
  background: #34495e;
  color: #fff;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

#copyright {
  background: #F1F1F1;
  color: #333;
}
#copyright a {
  color: #333;
}

.feature {
	padding: 0px;
	position: relative;
	overflow: hidden;
	height: 200px;
	background-color: #000000;
	margin-bottom: 30px;
}

.feature:hover .caption {
	opacity: 1;
	transform: translateY(-150px);
	-webkit-transform: translateY(-150px);
	-moz-transform: translateY(-150px);
	-ms-transform: translateY(-150px);
	-o-transform: translateY(-150px);
}

.feature img{
	z-index: 4;
}

.feature .caption{
	position: absolute;
	top:150px;
	-webkit-transition:all 0.3s ease-in-out;
	-moz-transition:all 0.3s ease-in-out;
	-o-transition:all 0.3s ease-in-out;
	-ms-transition:all 0.3s ease-in-out;
	transition:all 0.3s ease-in-out;
	width: 100%;
}

.feature .blur{
	background-color: rgba(0,0,0,0.7);
	height: 300px;
	z-index: 5;
	position: absolute;
	width: 100%;
}

.feature .caption-text{
	z-index: 10;
	color: #fff;
	position: absolute;
	height: 300px;
	text-align: center;
	top:-20px;
	width: 100%;
}

.feature .caption-text h4 {
	padding:15px;
	margin-top:15px;
}

.contribute-icon {
	font-size:65px;
	margin-top: 15px;
	margin-bottom: 15px;
}

.content-section {
	text-align:center;
}

.release-details {
	text-align:left;
}

.btnDownload {
    display:flex;
    flex: 1 0 auto;
    justify-content: center;
    align-items: center;
    margin-top: 5px;    
}

.btnDownloadIcon {
    flex: 0 0 auto;
    padding-right:10px;
    font-size:2em;
}

.btnDownloadText {
    flex: 0 1 auto;
}

.release-section {
    display:flex;
    flex-direction: column;
    align-items: stretch;
}

@media (min-width: 992px){
    .release-section {
        flex-direction: row;
    }
}

.flex-box-col {
    display:flex;
    flex-direction: column;
}

.flex-box-row {
    display:flex;
    flex-direction: row;
}

.flex00a {
    flex: 0 0 auto;
}

.flex11a {
    flex: 1 1 auto;
}

.flex11100 {
    flex: 1 1 100%;
}

.no-release-text {
    margin-top: 40px;
}

.stamp {
    position: relative;
    display: inline-block;
    color: red;
    padding: 15px;
    background-color: white;
    box-shadow:inset 0px 0px 0px 10px red;
    transform: rotate(30deg);
    margin-top: -150px;
    margin-left: 18%;
    font-size: 25px;
    width: 350px;
}

.stamp:after {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-image: url("../img/stamp.jpg");
    mix-blend-mode: lighten;
}

